--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.idea
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -103,12 +104,14 @@ celerybeat.pid
 
 # Environments
 .env
+.env.json
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+token.json
 
 # Spyder project settings
 .spyderproject
